--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -121,3 +121,7 @@ p{
 	background-color: #d0e5ec !important;
 	
 }
+
+.sapMPage > .sapMPageHeader + section, .sapMPage > .sapMPageSubHeader + section, .sapMPage > .sapMPageHeader + .sapUiHiddenPlaceholder + section{
+	top: 0px !important;
+}
